--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,13 @@ edition = "2021"
 [dependencies]
 hyper = { version = "0.14.24", features = ["full"] }
 tokio = { version = "1.25.0", features = ["full"] }
+
+[dependencies.windows-sys]
+version = "0.45.0"
+features = [
+    "Win32_Foundation",
+    "Win32_Security",
+    "Win32_System_Threading",
+    "Win32_UI_WindowsAndMessaging",
+    "
+]
